--- a/templates/template1/css/style.css
+++ b/templates/template1/css/style.css
@@ -3198,6 +3198,6 @@ body.offcanvas .oliven-nav-toggle {
   border-left: 5px solid red;
 }
 #home {
-    /* background-size: contain; */
+    background-size: contain;
     background-repeat: no-repeat;
 }
